[FEATURE] GitHub Actions to build PrusaSlicer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -590,11 +590,11 @@ function(prusaslicer_copy_dlls target)
     get_target_property(_alt_out_dir ${target} RUNTIME_OUTPUT_DIRECTORY)
 
     if (_alt_out_dir)
-        set (_out_dir "${_alt_out_dir}")
+        set(_out_dir "${_alt_out_dir}")
     elseif (_is_multi)
-        set (_out_dir "$<TARGET_PROPERTY:${target},BINARY_DIR>/$<CONFIG>")
+        set(_out_dir "$<TARGET_PROPERTY:${target},BINARY_DIR>/$<CONFIG>")
     else ()
-        set (_out_dir "$<TARGET_PROPERTY:${target},BINARY_DIR>")
+        set(_out_dir "$<TARGET_PROPERTY:${target},BINARY_DIR>")
     endif ()
     
     # This has to be a separate target due to the windows command line lenght limits    
@@ -625,9 +625,17 @@ if(SLIC3R_BUILD_TESTS)
     add_subdirectory(tests)
 endif()
 
+if (NOT WIN32 AND NOT APPLE)
+    set(SLIC3R_APP_CMD "prusa-slicer")
+    set(SLIC3R_VIEWER_CMD "prusa-gcodeviewer")
+    configure_file(src/platform/unix/build_appimage.sh.in ${CMAKE_CURRENT_BINARY_DIR}/build_appimage.sh @ONLY)
+endif()
 
 if (WIN32)
-    install(DIRECTORY "${SLIC3R_RESOURCES_DIR}/" DESTINATION "${CMAKE_INSTALL_PREFIX}/resources")
+    install(DIRECTORY "${SLIC3R_RESOURCES_DIR}/" DESTINATION "./resources")
+    set(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS_SKIP TRUE)
+    include(InstallRequiredSystemLibraries) 
+    install (PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION ".")
 elseif (SLIC3R_FHS)
     # CMAKE_INSTALL_FULL_DATAROOTDIR: read-only architecture-independent data root (share)
     set(SLIC3R_FHS_RESOURCES "${CMAKE_INSTALL_FULL_DATAROOTDIR}/PrusaSlicer")
@@ -651,3 +659,34 @@ else ()
     install(FILES src/platform/unix/PrusaGcodeviewer.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/resources/applications)
     install(DIRECTORY "${SLIC3R_RESOURCES_DIR}/" DESTINATION "${CMAKE_INSTALL_PREFIX}/resources")
 endif ()
+
+install(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION ".")
+configure_file(src/platform/unix/fhs.hpp.in ${LIBDIR_BIN}/platform/unix/fhs.hpp)
+
+set(CPACK_PACKAGE_NAME "PrusaSlicer+BOSS")
+set(CPACK_PACKAGE_VENDOR "mjonuschat")
+set(CPACK_PACKAGE_VERSION_MAJOR "${SLIC3R_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${SLIC3R_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${SLIC3R_VERSION_PATCH}")
+set(CPACK_PACKAGE_FILE_NAME "PrusaSlicer-Installer-${SLIC3R_VERSION}+BOSS")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "G-code generator for 3D printers (RepRap, Makerbot, Ultimaker etc.)")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/mjonuschat/PrusaSlicer")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
+set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/resources/icons\\\\PrusaSlicer.ico")
+set(CPACK_NSIS_MUI_ICON "${CPACK_PACKAGE_ICON}")
+set(CPACK_NSIS_MUI_UNIICON "${CPACK_PACKAGE_ICON}")
+set(CPACK_NSIS_INSTALLED_ICON_NAME  "$INSTDIR\\\\prusa-slicer.exe")
+set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "
+    CreateShortCut \\\"$DESKTOP\\\\PrusaSlicer+BOSS.lnk\\\" \\\"$INSTDIR\\\\prusa-slicer.exe\\\"
+")
+set(CPACK_PACKAGE_CHECKSUM SHA256)
+set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "PrusaSlicer+BOSS")
+set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
+set(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
+set(CPACK_PACKAGE_EXECUTABLES "prusa-slicer;PrusaSlicer")
+set(CPACK_CREATE_DESKTOP_LINKS "prusa-slicer")
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE) # must also include in install command
+
+set(CPACK_WIX_UPGRADE_GUID "9a6335f7-22a8-4da8-8475-fc6f03404544")
+set(CPACK_GENERATOR NSIS)
+include(CPack)
