--- a/.github/workflows/build_check_cache.yml
+++ b/.github/workflows/build_check_cache.yml
@@ -28,9 +28,9 @@ jobs:
       - name: set outputs
         id: set_outputs
         env:
-          underscore-arch: ${{ (inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14') && '_' || ''}}${{ (inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14') && inputs.arch || '' }} # if is macos, make a string that does "_{arch}", else output nothing
-          dash-arch: ${{ (inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14') && '-' || ''}}${{ (inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14') && inputs.arch || '' }} # if is macos, make a string that does "-{arch}", else output nothing
-          dep-folder-name: ${{ (inputs.os == 'windows-latest' || inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14') && 'PrusaSlicer_dep' || 'destdir' }}
+          underscore-arch: ${{ (inputs.os == 'macos-13' || inputs.os == 'macos-14') && '_' || ''}}${{ (inputs.os == 'macos-13' || inputs.os == 'macos-14') && inputs.arch || '' }} # if is macos, make a string that does "_{arch}", else output nothing
+          dash-arch: ${{ (inputs.os == 'macos-13' || inputs.os == 'macos-14') && '-' || ''}}${{ (inputs.os == 'macos-13' || inputs.os == 'macos-14') && inputs.arch || '' }} # if is macos, make a string that does "-{arch}", else output nothing
+          dep-folder-name: ${{ (inputs.os == 'windows-latest' || inputs.os == 'macos-13' || inputs.os == 'macos-14') && 'PrusaSlicer_dep' || 'destdir' }}
           output-cmd: ${{ inputs.os == 'windows-latest' && '$env:GITHUB_OUTPUT' || '"$GITHUB_OUTPUT"'}}
         run: |
           echo cache-key=${{ runner.os }}${{ env.dash-arch }}-cache-Prusaslicer_deps-build-${{ hashFiles('deps/**') }} >> ${{ env.output-cmd }}
