--- a/.github/workflows/build_deps.yml
+++ b/.github/workflows/build_deps.yml
@@ -69,7 +69,7 @@ jobs:
             cd ${{ github.workspace }}/deps/build
 
       - name: Build on Mac ${{ inputs.arch }}
-        if: inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14'
+        if: inputs.os == 'macos-13' || inputs.os == 'macos-14'
         working-directory: ${{ github.workspace }}
         run: |
             brew remove -f automake
@@ -79,7 +79,7 @@ jobs:
             mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}
             mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PrusaSlicer_dep_${{ inputs.arch }}
             brew uninstall --ignore-dependencies zstd
-            ./build_release_macos.sh -dp -a ${{ inputs.arch }} -t 10.15
+            ./build_release_macos.sh -dp -a ${{ inputs.arch }} -t 11.3
             brew install zstd
 
       - name: Build on Ubuntu
@@ -98,7 +98,7 @@ jobs:
 
       # Upload Artifacts
       - name: Upload Mac ${{ inputs.arch }} artifacts
-        if: inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14'
+        if: inputs.os == 'macos-13' || inputs.os == 'macos-14'
         uses: actions/upload-artifact@v4
         with:
           name: PrusaSlicer_dep_mac_${{ inputs.arch }}_${{ env.date }}
