--- a/.github/workflows/build_prusa.yml
+++ b/.github/workflows/build_prusa.yml
@@ -74,7 +74,7 @@ jobs:
 
 #   Mac
       - name: Install tools mac
-        if: inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14'
+        if: inputs.os == 'macos-13' || inputs.os == 'macos-14'
         run: |
           brew install git gettext automake texinfo tree
           mkdir -p ${{ github.workspace }}/deps/build_${{inputs.arch}}
@@ -82,13 +82,13 @@ jobs:
           tree ${{ github.workspace }}/deps/build_${{inputs.arch}}/PrusaSlicer_dep_${{inputs.arch}}
 
       - name: Build slicer mac
-        if: inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14'
+        if: inputs.os == 'macos-13' || inputs.os == 'macos-14'
         working-directory: ${{ github.workspace }}
         run: |
-          ./build_release_macos.sh -s -n -a ${{inputs.arch}} -t 10.15
+          ./build_release_macos.sh -s -n -a ${{inputs.arch}} -t 11.3
 
       - name: Sign app and notary
-        if: (github.ref == 'refs/heads/boss' || startsWith(github.ref, 'refs/heads/release/')) && (inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14')
+        if: (github.ref == 'refs/heads/boss' || startsWith(github.ref, 'refs/heads/release/')) && (inputs.os == 'macos-13' || inputs.os == 'macos-14')
         working-directory: ${{ github.workspace }}
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
@@ -98,7 +98,7 @@ jobs:
         run: |
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode > $CERTIFICATE_PATH
           security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
@@ -114,14 +114,14 @@ jobs:
           xcrun stapler staple PrusaSlicer-${{ env.ver }}+MacOS-${{inputs.arch}}-${{ env.date }}.dmg
 
       - name: Create DMG without notary
-        if: (github.ref != 'refs/heads/boss' && !startsWith(github.ref, 'refs/heads/release/')) && (inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14')
+        if: (github.ref != 'refs/heads/boss' && !startsWith(github.ref, 'refs/heads/release/')) && (inputs.os == 'macos-13' || inputs.os == 'macos-14')
         working-directory: ${{ github.workspace }}
         run: |
           ln -s /Applications ${{ github.workspace }}/build_${{inputs.arch}}/PrusaSlicer/Applications
           hdiutil create -volname "PrusaSlicer" -srcfolder ${{ github.workspace }}/build_${{inputs.arch}}/PrusaSlicer -ov -format UDZO PrusaSlicer-${{ env.ver }}+MacOS-${{inputs.arch}}-${{ env.date }}.dmg
 
       - name: Upload artifacts mac
-        if: inputs.os == 'macos-12' || inputs.os == 'macos-13' || inputs.os == 'macos-14'
+        if: inputs.os == 'macos-13' || inputs.os == 'macos-14'
         uses: actions/upload-artifact@v4
         with:
           name: PrusaSlicer-${{ env.ver }}+MacOS-${{inputs.arch}}-${{ env.date }}
