--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -2,18 +2,19 @@ name: Build Linux
 
 on:
   workflow_call:
+  workflow_dispatch:
 
 jobs:
   build_flatpak:
     name: Compile & Bundle Flatpak
     runs-on: ubuntu-latest
     container:
-      image: bilelmoussaoui/flatpak-github-actions:gnome-47
+      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-47
       options: --privileged
     env:
-      date:
-      ver:
-      ver_pure:      
+      date: ""
+      ver: ""
+      ver_pure: ""
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,7 +33,7 @@ jobs:
         shell: bash
 
       - name: Build PrusaSlicer (BOSS) Linux Flatpak
-        uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+        uses: flathub-infra/flatpak-github-actions/flatpak-builder@master
         with:
           bundle: PrusaSlicer-${{ env.ver }}+Linux-${{ env.date }}.flatpak
           manifest-path: .flatpak/io.github.mjonuschat.PrusaSlicer.yml
