chore(deps): Update Linux build dependencies

--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          brew install automake cmake git gettext libtool texinfo m4 zlib
+          brew install automake git gettext libtool texinfo m4 zlib
 
       - name: Downgrade automake
         run: |
