--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -155,6 +155,8 @@ set(SLIC3R_SOURCES
     Format/SL1_SVG.cpp
     Format/AnycubicSLA.hpp
     Format/AnycubicSLA.cpp
+    Format/CTB.hpp
+    Format/CTB.cpp
     Format/STEP.hpp
     Format/STEP.cpp
     Format/SVG.hpp
@@ -615,6 +617,7 @@ target_include_directories(libslic3r PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMA
 target_include_directories(libslic3r PUBLIC ${EXPAT_INCLUDE_DIRS})
 
 find_package(JPEG REQUIRED)
+find_package(OpenSSL REQUIRED)
 find_package(nlohmann_json REQUIRED)
 
 target_link_libraries(libslic3r PRIVATE
@@ -625,6 +628,9 @@ target_link_libraries(libslic3r PRIVATE
     libexpat
     glu-libtess
     qhull
+    OpenSSL::SSL
+    OpenSSL::Crypto
+    semver
     TBB::tbb
     TBB::tbbmalloc
     libslic3r_cgal
